Dernière mise à jour

--- a/index.html
+++ b/index.html
@@ -216,19 +216,6 @@ Hategekimana Vestin
 <ul>
 <li><strong>Visa</strong> ou <strong>permis de séjour</strong></li>
 </ul>
-<aside class="notes">
-<p>Test de notes (Speaker view s)</p>
-<style type="text/css">
-        span.MJX_Assistive_MathML {
-          position:absolute!important;
-          clip: rect(1px, 1px, 1px, 1px);
-          padding: 1px 0 0 0!important;
-          border: 0!important;
-          height: 1px!important;
-          width: 1px!important;
-          overflow: hidden!important;
-          display:block!important;
-      }</style></aside>
 </section>
 <section id="def-refugies" class="slide level2" data-auto-animate="true">
 <h2 data-id="quarto-animate-title">Qu’est‑ce que la migration ?</h2>
@@ -393,7 +380,7 @@ Hategekimana Vestin
 <section id="migration-dans-les-médias-cadre-médiatique-quels-récits" class="slide level2 scrollable">
 <h2>Migration dans les médias: Cadre médiatique : quels récits ?</h2>
 <blockquote>
-<p><a href="https://www.otto-brenner-stiftung.de/fileadmin/user_data/stiftung/02_Wissenschaftsportal/03_Publikationen/AP39_Migration_EN.pdf"><em>Étude comparative « Migration coverage in Europe’s media » (2020).</em> 2015-2018</a></p>
+<p><a href="https://www.otto-brenner-stiftung.de/fileadmin/user_data/stiftung/02_Wissenschaftsportal/03_Publikationen/AP39_Migration_EN.pdf"><em>Étude comparative “Migration coverage in Europe’s media” (2020).</em> 2015-2018</a></p>
 </blockquote>
 <ul>
 <li>Couverture médiatique <strong>majoritairement négative</strong></li>
@@ -404,7 +391,7 @@ Hategekimana Vestin
 <section id="migration-dans-les-médias-cadre-médiatique-quels-récits-1" class="slide level2 scrollable">
 <h2>Migration dans les médias: Cadre médiatique : quels récits ?</h2>
 <blockquote>
-<p><a href="https://www.otto-brenner-stiftung.de/fileadmin/user_data/stiftung/02_Wissenschaftsportal/03_Publikationen/AP39_Migration_EN.pdf"><em>Étude comparative « Migration coverage in Europe’s media » (2020).</em> 2015-2018</a></p>
+<p><a href="https://www.otto-brenner-stiftung.de/fileadmin/user_data/stiftung/02_Wissenschaftsportal/03_Publikationen/AP39_Migration_EN.pdf"><em>Étude comparative “Migration coverage in Europe’s media” (2020).</em> 2015-2018</a></p>
 </blockquote>
 <table class="caption-top">
 <colgroup>
@@ -706,15 +693,12 @@ Hategekimana Vestin
 <section id="létatnation-et-la-fixation-des-frontières" class="slide level2">
 <h2>L’État‑nation et la fixation des frontières</h2>
 <ul>
-<li><strong>Traité de Westphalie (1648)</strong> : souveraineté territoriale reconnue, frontières « délimitées » entre États.<br>
+<li><strong>Traité de Westphalie (1648)</strong> : souveraineté territoriale reconnue, frontières “délimitées” entre États.<br>
 </li>
 <li><strong>XIXᵉ siècle</strong> : colonisation → tracé de frontières arbitraires, souvent sans tenir compte des réalités ethniques ou géographiques.<br>
 </li>
-<li><strong>Après‑WWI</strong> : création de la Société des Nations → premiers passeports « internationaux » pour les réfugiés.</li>
+<li><strong>Après‑WWI</strong> : création de la Société des Nations → premiers passeports “internationaux” pour les réfugiés.</li>
 </ul>
-<blockquote>
-<p>L’État‑nation transforme la frontière d’un <strong>repère militaire</strong> en <strong>délimitation juridique</strong> et <strong>instrument de souveraineté</strong>.</p>
-</blockquote>
 </section>
 <section id="de-westphalie-à-schengen-la-transformation-des-frontières" class="slide level2 scrollable">
 <h2>De Westphalie à Schengen : la transformation des frontières</h2>
@@ -735,7 +719,7 @@ Hategekimana Vestin
 <tr class="odd">
 <td><strong>Traité de Westphalie</strong></td>
 <td>1648</td>
-<td>Instaure la souveraineté territoriale des États‑nations ; les frontières deviennent « délimitées ».</td>
+<td>Instaure la souveraineté territoriale des États‑nations ; les frontières deviennent “délimitées”.</td>
 </tr>
 <tr class="even">
 <td><strong>19ᵉ siècle</strong></td>
@@ -755,7 +739,7 @@ Hategekimana Vestin
 </tbody>
 </table>
 <blockquote>
-<p><em>Référence :</em> Atak 2021, § II « Réglementations spécifiques à l’espace Schengen » ; Wimmer &amp; Glick Schiller (2002) sur la « containerisation » des sociétés nationales.</p>
+<p><em>Référence :</em> Atak 2021, § II “Réglementations spécifiques à l’espace Schengen” ; Wimmer &amp; Glick Schiller (2002) sur la “containerisation” des sociétés nationales.</p>
 </blockquote>
 </section>
 <section id="mécanismes-de-migration-régulière" class="slide level2">
@@ -780,7 +764,7 @@ Hategekimana Vestin
 <p><strong>Base</strong>: une <strong>durée</strong> et un <strong>motif</strong> précis</p>
 <p><br>
 </p>
-<p>Le visa <strong>institutionnalise la hiérarchie</strong> des mobilités : il sépare les voyages « choisis » (tourisme, affaires) des voyages « régulés » (travail, études, asile).</p>
+<p>Le visa <strong>institutionnalise la hiérarchie</strong> des mobilités : il sépare les voyages “choisis” (tourisme, affaires) des voyages “régulés” (travail, études, asile).</p>
 </section>
 <section id="hiérarchie-des-mobilités-choisis-vs.-forcés" class="slide level2 scrollable">
 <h2>Hiérarchie des mobilités : choisis vs.&nbsp;forcés</h2>
@@ -801,7 +785,7 @@ Hategekimana Vestin
 </thead>
 <tbody>
 <tr class="odd">
-<td><strong>Voyage touristique</strong> (passe‑port « fort »)</td>
+<td><strong>Voyage touristique</strong> (passe‑port “fort”)</td>
 <td>Aucun visa ou visa à l’arrivée</td>
 <td>Faible (billet d’avion)</td>
 <td>Très faible</td>
@@ -821,14 +805,8 @@ Hategekimana Vestin
 <tr class="even">
 <td><strong>Migrants économiques de pays pauvres</strong></td>
 <td>Visa requis, quotas, exigences financières</td>
-<td>Très élevé (frais de visa 30‑150 €, transport)</td>
+<td>Très élevé (frais de visa 30‑150.-, transport)</td>
 <td>Très élevé</td>
-</tr>
-<tr class="odd">
-<td><strong>Réfugiés &amp; apatrides</strong></td>
-<td>Pas de passe‑port, recours humanitaire</td>
-<td>Gratuit (souvent) mais dépend de l’accueil</td>
-<td>Extrêmement élevé</td>
 </tr>
 </tbody>
 </table>
@@ -840,9 +818,9 @@ Hategekimana Vestin
 <h2>Géographie du pouvoir de passeport</h2>
 <p><a href="https://www.passportindex.org/">Passport index</a></p>
 <ul>
-<li><strong>Passeports « puissants »</strong> : UE, États‑Unis, Canada, Australie, Japon – accès sans visa à 180 + pays.<br>
+<li><strong>Passeports “puissants”</strong> : UE, États‑Unis, Canada, Australie, Japon – accès sans visa à 160 + pays.<br>
 </li>
-<li><strong>Passeports « faibles »</strong> : Afghanistan, Soudan du Sud, Yémen – accès sans visa à &lt; 30 pays, exigences de visa coûteuses.</li>
+<li><strong>Passeports “faibles”</strong> : Afghanistan, Soudan du Sud, Yémen – accès sans visa à &lt; 40 pays, exigences de visa coûteuses.</li>
 </ul>
 <blockquote>
 <p>La valeur du passeport <strong>correspond</strong> à la richesse économique du pays d’origine et à la perception de risque par les États d’accueil.</p>
@@ -877,7 +855,7 @@ Hategekimana Vestin
 <h2 data-id="quarto-animate-title">Le visa comme instrument économique</h2>
 <p>Achat de citoyenneté</p>
 <ul>
-<li><strong>Exemple d’investissement‑citoyenneté</strong> : Malte (programme « Individual Investor Programme ») – passeport acheté contre investissement + contributions.</li>
+<li><strong>Exemple d’investissement‑citoyenneté</strong> : Malte (programme “Individual Investor Programme”) – passeport acheté contre investissement + contributions.</li>
 </ul>
 <p><br>
 </p>
@@ -890,7 +868,7 @@ Hategekimana Vestin
 </li>
 <li><strong>Impact sur les droits humains</strong> : accès limité aux soins, à l’éducation, à la protection juridique.<br>
 </li>
-<li><strong>Effet de « brain‑drain »</strong> : les élites migrent, laissant derrière elles des économies fragilisées.</li>
+<li><strong>Effet de “brain‑drain”</strong> : les élites migrent, laissant derrière elles des économies fragilisées.</li>
 </ul>
 </section>
 <section id="mobilités-inégales-conséquences-sociales-1" class="slide level2">
@@ -950,7 +928,7 @@ Hategekimana Vestin
 <tr class="odd">
 <td><strong>Globalisation néolibérale (1980‑2000)</strong></td>
 <td>Accords de libre‑échange, mobilité qualifiée</td>
-<td>Chine → USA (tech), Philippines → Gulf</td>
+<td>Chine → USA (tech)</td>
 </tr>
 <tr class="even">
 <td><strong>Hyper‑connectivité (2000‑présent)</strong></td>
@@ -1060,6 +1038,10 @@ Hategekimana Vestin
     vizElement.parentNode.insertBefore(scriptElement, vizElement);
 </script>
 </section>
+<section id="migration-entre-nord-et-sud" class="slide level2">
+<h2>Migration entre Nord et Sud</h2>
+
+<img data-src="image/institut_convergences_migration_Graph-1_nov-2018_image.png" class="r-stretch"></section>
 <section id="évolution-de-la-migration-dasile" class="slide level2 scrollable">
 <h2>Évolution de la migration d’asile</h2>
 <div id="viz1770148206333" class="tableauPlaceholder" style="position: relative">
@@ -1136,7 +1118,7 @@ Hategekimana Vestin
 <ul>
 <li><strong>Refoulement</strong> : renvoi d’une personne vers un pays où elle risque d’être persécutée ou exposée à des risques graves, <strong>sans examen individuel de sa demande d’asile</strong> (art. 33 de la Convention de Genève).<br>
 </li>
-<li>Pratique interdite par le droit international humanitaire et les conventions européennes (Charte des droits fondamentaux de l’UE, Directive 2013/32).</li>
+<li><strong>Pratique interdite</strong> par le droit international humanitaire et les conventions européennes (Charte des droits fondamentaux de l’UE, Directive 2013/32).</li>
 </ul>
 </section>
 <section id="refoulement-pushback-1" class="slide level2">
@@ -1344,32 +1326,31 @@ Hategekimana Vestin
 </section>
 <section id="migration-climatique-routes-émergentes-20302050" class="slide level2">
 <h2>Migration climatique – routes émergentes (2030‑2050)</h2>
+<p><strong>Causes</strong></p>
 <ul>
-<li><strong>Sahel → Méditerranée</strong> (désertification, perte de terres agricoles) – projection : <strong>+ 3 M</strong> de migrants climatiques d’ici 2050 (World Bank 2021).<br>
-</li>
-<li><strong>Bangladesh → Inde/Malaisie</strong> (élévation du niveau de la mer) – <strong>≈ 1,5 M</strong> d’internes déplacés d’ici 2040 (IPCC 2022)¹⁴.</li>
+<li>sécheresse / désertification</li>
+<li>cyclones</li>
+<li>inondations, sécheresses, incendies de forêt</li>
+</ul>
+<p><strong>Conséquence</strong></p>
+<ul>
+<li>Court terme: déplacement interne</li>
+<li>Long terme: déplacement international</li>
 </ul>
 </section>
 <section id="mobilité-expat-vs-migration-dépolitisée" class="slide level2">
-<h2>Mobilité « expat » vs migration : dépolitisée</h2>
+<h2>Mobilité “expat” vs migration : dépolitisée</h2>
 <ul>
 <li><strong>Expatriés hautement qualifiés</strong> (Tech, Finance) : 5,4 M personnes (2022) ; souvent exclues des débats publics</li>
-<li><strong>Pourquoi ?</strong> : visas « premium », couverture médiatique limitée, perception d’« investissement » plutôt que de « déplacement ».</li>
+<li><strong>Pourquoi ?</strong> : visas “premium, couverture médiatique limitée, perception d’”investissement” plutôt que de “déplacement”.</li>
 </ul>
 </section>
 <section id="de-quoi-parle-t-on-rarement" class="slide level2">
 <h2>De quoi parle-t-on rarement?</h2>
 <ul>
-<li><p>Contribution économique</p></li>
-<li><p>Perte de talents</p></li>
-<li><p>Dignité</p></li>
-</ul>
-</section>
-<section id="contributions-économiques-des-migrants" class="slide level2">
-<h2>Contributions économiques des migrants</h2>
-<ul>
-<li><strong>Fiscalité</strong> : Contribution au marché du travail</li>
-<li><strong>Innovation</strong> : 30 % des brevets déposés en UE (2015‑2020) attribués à des équipes incluant au moins un migrant¹⁶.</li>
+<li><p>Contribution économique (fiscalité)</p></li>
+<li><p>Conditions dans le pays d’origine avant/pendant/après le départ</p></li>
+<li><p>Dignité: droit vs besoin “qu’est-ce que ça rapporte?”</p></li>
 </ul>
 </section></section>
 <section>
@@ -1377,58 +1358,21 @@ Hategekimana Vestin
 <h1>Futur de la migration</h1>
 
 </section>
-<section id="tendances-démographiques-économiques" class="slide level2">
-<h2>Tendances démographiques &amp; économiques</h2>
+<section id="tendances-politique-démographiques-économiques" class="slide level2">
+<h2>Tendances politique, démographiques &amp; économiques</h2>
 <ul>
-<li><strong>Vieillissement</strong> : Europe ‑ population &gt; 65 ans = 23 % (2030) → besoin accru de main‑d’œuvre qualifiée.<br>
-</li>
-<li><strong>Brain‑drain/gain</strong> : 12 % des diplômés africains émigrent (2022) ; potentiel de <strong>remittances</strong> ≈ US $ 850 M annuels (World Bank 2023).</li>
+<li><strong>Vieillissement</strong> : Europe ‑ population &gt; 65 ans = 23 % (2030) → besoin accru de main‑d’œuvre qualifiée</li>
+<li><strong>Brain‑drain/gain</strong> : 12 % des diplômés africains émigrent (2022) ; potentiel de <strong>remittances</strong> ≈ US $ 850 M annuels (World Bank 2023)</li>
+<li><strong>Populisme</strong> : hausse de partis anti‑immigration (+ 8 % des votes en UE, 2022)</li>
 </ul>
 </section>
-<section id="politiques-discours" class="slide level2">
-<h2>Politiques &amp; discours</h2>
+<section id="points-clés" class="slide level2">
+<h2>Points clés</h2>
 <ul>
-<li><strong>Populisme</strong> : hausse de partis anti‑immigration (+ 8 % des votes en UE, 2022).<br>
-</li>
-<li><strong>Réponses institutionnelles</strong> : <strong>Pacte mondial pour une migration sûre, ordonnée et régulière</strong> (2023) – 5 piliers (protection, intégration, coopération).</li>
+<li><p><strong>La migration est un phénomène complexe (migration, asile, politique, etc.)</strong></p></li>
+<li><p><strong>La mobilité n’est pas distribuée également</strong></p></li>
+<li><p><strong>Les conséquences des migration sont multiples</strong></p></li>
 </ul>
-</section>
-<section id="scénarios-prospectifs-un-population-division-2024" class="slide level2">
-<h2>Scénarios prospectifs (UN Population Division 2024)</h2>
-<table class="caption-top">
-<colgroup>
-<col style="width: 20%">
-<col style="width: 26%">
-<col style="width: 54%">
-</colgroup>
-<thead>
-<tr class="header">
-<th>Scénario</th>
-<th>Description</th>
-<th>Migration nette 2030‑2050</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td><strong>Business‑as‑usual</strong></td>
-<td>Continuité des politiques actuelles, hausse des frontières physiques.</td>
-<td><strong>+ 45 M</strong> (principalement climatiques).</td>
-</tr>
-<tr class="even">
-<td><strong>Co‑governance</strong></td>
-<td>Adoption du modèle “Managed Commons”, partage des responsabilités.</td>
-<td><strong>+ 30 M</strong>, meilleure intégration, réduction des décès de 15 %.</td>
-</tr>
-<tr class="odd">
-<td><strong>Isolationist</strong></td>
-<td>Renforcement des contrôles, fermeture des voies légales.</td>
-<td><strong>‑ 10 M</strong> (déplacement clandestin accru, mortalité × 2).</td>
-</tr>
-</tbody>
-</table>
-</section>
-<section class="slide level2">
-
 </section></section>
 <section>
 <section id="merci-pour-votre-attention" class="title-slide slide level1 center">
